[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.idea
  | \.pytest_cache
  | _build
  | build
  | dist
  | venv
)/
'''


[tool.poetry]
name = "FastFlix"
version = "5.3.0"
description = "GUI Encoder"
license = "MIT"
authors = ["Chris Griffith <chris@cdgriffith.com>", ]
include = ["fastflix", "AUTHORS", "CHANGES", "LICENSE", "fastflix/CHANGES"]
readme = "README.md"
homepage = "https://fastflix.org"
repository = "https://github.com/cdgriffith/FastFlix"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
appdirs = "~=1.4"
chardet = ">=5.1.0,<5.2.0"
colorama = ">=0.4,<1.0"
coloredlogs = ">=15.0,<16.0"
iso639-lang = "0.0.9"
mistune = ">=2.0,<3.0"
pathvalidate = ">=2.4,<3.0"
psutil = ">=5.9,<6.0"
pydantic = ">=1.9,<2.0"
pyside6 = ">=6.4.2,<7.0"
python-box = {version = ">=6.0,<7.0", extras = ["all"]}
requests = ">=2.28,<3.0"
reusables = ">=0.9.6,<0.10.0"
pypiwin32 = {version = ">=223", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
wheel = ">=0.38.4"
typing_extensions = ">=4.4"
pyinstaller = ">=5.7"
pytest = ">=7.2"
types-requests = ">=2.28"
types-setuptools = ">=65.7"
pre-commit = "^3.0.3"

[tool.poetry.scripts]
fastflix = "fastflix.__main__:start_fastflix"
