[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.eggs
  | \.git
  | \.idea
  | \.pytest_cache
  | _build
  | build
  | dist
  | venv
)/
'''

[project]
name = "fastflix"
description = "GUI Encoder"
authors = [{ name = "Chris Griffith", email = "chris@cdgriffith.com" }]
readme = "README.md"
#url = "https://fastflix.org"
#download_url = "https://github.com/cdgriffith/FastFlix/releases"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "appdirs~=1.4",
    "chardet>=5.1.0,<5.2.0",
    "colorama>=0.4,<1.0",
    "coloredlogs>=15.0,<16.0",
    "iso639-lang==0.0.9",
    "mistune>=2.0,<3.0",
    "packaging>=23.2",
    "pathvalidate>=2.4,<3.0",
    "psutil>=5.9,<6.0",
    "pydantic>=1.9,<2.0",
    "pyside6>=6.4.2",
    "python-box[all]>=6.0,<7.0",
    "requests>=2.28,<3.0",
    "reusables>=0.9.6,<0.10.0",
]

[project.optional-dependencies]
develop = [
    "wheel>=0.38.4",
    "typing_extensions>=4.4",
    "pyinstaller>=5.7",
    "pytest>=7.3",
    "types-requests>=2.28",
    "types-setuptools>=65.7",
    "pre-commit>=3.0.3",
]

[project.scripts]
fastflix = "fastflix.__main__:start_fastflix"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastflix*"]

[tool.setuptools.package-data]
"*" = ['*.yaml', '*.ico', '*.svg', '*.png']

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "fastflix.version.__version__" }
